attempt to filter slurs with a blocklist (does not work)

--- a/bot/config.sample.json
+++ b/bot/config.sample.json
@@ -1,8 +1,9 @@
 {
-    "discordToken": "YOUR_DISCORD_BOT_TOKEN",
-    "openai": {
-      "apiKey": "YOUR_OPENAI_API_KEY",
-      "modelId": "YOUR_OPENAI_MODEL_ID"
-    }
-  }
-  
+  "discordToken": "YOUR_DISCORD_TOKEN",
+  "openai": {
+    "apiKey": "YOUR_OPENAI_API_KEY",
+    "modelId": "YOUR_MODEL_ID"
+  },
+  "severityCategory": 2,
+  "maxTokens": 15
+}
