channel restrictor, and actually make sure the words arent blocked.

--- a/bot/config.sample.json
+++ b/bot/config.sample.json
@@ -6,5 +6,6 @@
   },
   "severityCategory": 2,
   "maxTokens": 15,
-  "systemPrompt": "SYSTEM-PROMPT"
+  "systemPrompt": "SYSTEM-PROMPT",
+  "allowedChannelId": "CHANNEL-ID"
 }
