lower reaction count for training
also prelimanary work on using openai api instead of the hacky solution we're using now (will be coming in a future release)

--- a/bot/package.json
+++ b/bot/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^14.14.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "openai": "^4.21.0"
   }
 }
