update readme for newest stuff, move entirely to bucket2, and make sure the config sample reflects this too (also let bucket1 use the new config)

--- a/bot/config.sample.json
+++ b/bot/config.sample.json
@@ -1,6 +1,6 @@
 {
   "discordToken": "YOUR_DISCORD_TOKEN",
-  "openai": {
+  "openaiapi": {
     "apiKey": "YOUR_OPENAI_API_KEY",
     "modelId": "YOUR_MODEL_ID"
   },
