--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "electron-squirrel-startup": "^1.0.0",
+    "full-icu": "^1.5.0",
     "inquirer": "^9.2.12",
     "node-fetch": "^3.3.2",
     "openai": "^4.21.0"
