--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,41 +1,46 @@
 {
-  "dependencies": {
-    "discord.js": "^14.14.1",
-    "electron-squirrel-startup": "^1.0.0",
-    "full-icu": "^1.5.0",
-    "inquirer": "^9.2.12",
-    "node-fetch": "^3.3.2",
-    "openai": "^4.21.0"
-  },
-  "name": "bucket",
-  "version": "2.5.0",
-  "description": "Bucket is an AI Language Model that is trained on a Discord server.",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/runguszone/Bucket.git"
-  },
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
-  },
-  "keywords": [
-    "bucket"
-  ],
-  "author": "rungus",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/runguszone/Bucket/issues"
-  },
-  "homepage": "https://github.com/runguszone/Bucket#readme",
-  "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "electron": "^28.1.0"
-  }
+    "dependencies": {
+        "bucket": "file:",
+        "discord.js": "^14.14.1",
+        "electron-squirrel-startup": "^1.0.0",
+        "full-icu": "^1.5.0",
+        "inquirer": "^9.2.12",
+        "node-fetch": "^3.3.2",
+        "openai": "^4.21.0"
+    },
+    "name": "bucket",
+    "version": "2.5.0",
+    "description": "Bucket is an AI Language Model that is trained on a Discord server.",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/runguszone/Bucket.git"
+    },
+    "scripts": {
+        "start": "electron-forge start",
+        "bucket": "electron-forge start",
+        "package": "electron-forge package",
+        "make": "electron-forge make"
+    },
+    "bin": {
+        "bucket": "./index.js"
+    },
+    "keywords": [
+        "bucket"
+    ],
+    "author": "rungus",
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/runguszone/Bucket/issues"
+    },
+    "homepage": "https://github.com/runguszone/Bucket#readme",
+    "devDependencies": {
+        "@electron-forge/cli": "^7.2.0",
+        "@electron-forge/maker-deb": "^7.2.0",
+        "@electron-forge/maker-rpm": "^7.2.0",
+        "@electron-forge/maker-squirrel": "^7.2.0",
+        "@electron-forge/maker-zip": "^7.2.0",
+        "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+        "electron": "^28.1.0"
+    }
 }
