experimental avoid mode for serious topics and the bot wont shut up

--- a/bot/config.sample.json
+++ b/bot/config.sample.json
@@ -3,6 +3,8 @@
     "allowedChannelId": "YOUR_CHANNEL_ID",
     "trainEmoji": "🔥",
     "reactionCount": 3,
+    "stopEmoji": "🤫",
+    "silenceDurationMinutes": 30,
     "openaiapi": {
         "apiKey": "YOUR_OPENAI_API_KEY",
         "modelId": "your fine tuned model id",
